--- a/server/pom.xml
+++ b/server/pom.xml
@@ -22,7 +22,11 @@
     </properties>
 
     <dependencies>
-
+	<!-- <dependency>
+		<groupId>net.sf.json-lib</groupId>
+		<artifactId>json-lib</artifactId>
+        	<version>2.0.3</version>
+        </dependency> -->
         <dependency>
             <groupId>org.mapstruct</groupId>
             <artifactId>mapstruct</artifactId>
