--- a/server/src/main/resources/application.yml
+++ b/server/src/main/resources/application.yml
@@ -1,18 +1,19 @@
 spring:
   datasource:
-    url : jdbc:mysql://localhost:3306/test?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=true&serverTimezone=GMT%2B8&allowMultiQueries=true
+    url: jdbc:mysql://localhost:3306/test?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=true&serverTimezone=GMT%2B8&allowMultiQueries=true
     username: root
-    password: 704104..
+    password: 704104
     driver-class-name: com.mysql.cj.jdbc.Driver
-
+  jpa:
+    database: mysql
+    show-sql: true
+    hibernate:
+      ddl-auto: update
 mybatis:
   mapper-locations: classpath:mapping/**/*Mapper.xml
   type-aliases-package: com.example.demo
-
 server:
   port: 80
-
-
 
 #showSql
 logging:
