--- a/server/src/main/resources/application.yml
+++ b/server/src/main/resources/application.yml
@@ -2,7 +2,7 @@ spring:
   datasource:
     url: jdbc:mysql://localhost:3306/test?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=true&serverTimezone=GMT%2B8&allowMultiQueries=true
     username: root
-    password: 704104
+    password: 704104..
     driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
     database: mysql
