form的toml格式提交

--- a/client/package.json
+++ b/client/package.json
@@ -48,10 +48,6 @@
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
-    "rxjs": "~6.6.0",
-    "tslib": "^2.3.0",
-    "zone.js": "~0.11.4",
-    "ng-zorro-antd": "^12.0.1",
     "@delon/abc": "^12.2.3",
     "@delon/acl": "^12.2.3",
     "@delon/auth": "^12.2.3",
@@ -61,10 +57,15 @@
     "@delon/mock": "^12.2.3",
     "@delon/theme": "^12.2.3",
     "@delon/util": "^12.2.3",
+    "ajv": "^8.6.2",
+    "ng-zorro-antd": "^12.0.1",
     "ngx-tinymce": "^12.0.0",
     "ngx-ueditor": "^12.0.0",
+    "rxjs": "~6.6.0",
     "screenfull": "^5.1.0",
-    "ajv": "^8.6.2"
+    "toml": "^3.0.0",
+    "tslib": "^2.3.0",
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~12.2.0",
