--- a/client/src/assets/sample/form.toml
+++ b/client/src/assets/sample/form.toml
@@ -3,7 +3,7 @@ title = "sample1页面"
 expand = true
 [body]
 title = "sample1表单"
-type = "meta-form"
+type = "form"
 mode = "inline"
 expand = true
 [[body.body]]
