--- a/client/package.json
+++ b/client/package.json
@@ -23,7 +23,7 @@
   "scripts": {
     "ng-high-memory": "node --max_old_space_size=8000 ./node_modules/@angular/cli/bin/ng",
     "ng": "ng",
-    "build-ng-alaim-amis":"ng build ng-alain-amis --configuration development --watch",
+    "build-ng-alaim-amis": "ng build ng-alain-amis --configuration development --watch",
     "start": "ng s --proxy-config proxy.conf.json",
     "hmr": "ng s -o --hmr",
     "build": "npm run ng-high-memory build",
@@ -61,6 +61,7 @@
     "ajv": "^8.6.2",
     "handlebars": "^4.7.7",
     "ng-zorro-antd": "^12.0.1",
+    "ngx-markdown": "^12.0.1",
     "ngx-tinymce": "^12.0.0",
     "ngx-ueditor": "^12.0.0",
     "path-browserify": "^1.0.1",
