--- a/client/angular.json
+++ b/client/angular.json
@@ -27,7 +27,7 @@
             "polyfills": "src/polyfills.ts",
             "assets": ["src/assets", "src/favicon.ico"],
             "styles": ["src/styles.less"],
-            "scripts": [],
+            "scripts": ["node_modules/marked/lib/marked.js"],
             "allowedCommonJsDependencies": ["ajv", "ajv-formats"]
           },
           "configurations": {
