--- a/client/src/assets/sample/form-item/labelRemark.toml
+++ b/client/src/assets/sample/form-item/labelRemark.toml
@@ -16,8 +16,7 @@ name = "text2"
 type = "input-text"
 label = "更复杂的标签提示"
 name = "text3"
-
-[labelRemark]
+[body.body.labelRemark]
 type = "remark"
 title = "提示"
 content = "<pre>first \nsecond\n${text1}</pre>"
