--- a/client/package.json
+++ b/client/package.json
@@ -61,6 +61,7 @@
     "ajv": "^8.6.2",
     "handlebars": "^4.7.7",
     "ng-zorro-antd": "^12.0.1",
+    "ng2-dragula": "^2.1.1",
     "ngx-markdown": "^12.0.1",
     "ngx-tinymce": "^12.0.0",
     "ngx-ueditor": "^12.0.0",
